tests/it/wire/snapshots/it__wire__openai_chat__a_200_with_no_choices_fails_to_decode.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "response_decode",
  "message": "provider compat returned no choices in the response",
  "provider": "compat",
  "retry": {
    "type": "safe"
  },
  "raw_data": {
    "id": "chatcmpl-empty",
    "object": "chat.completion",
    "choices": []
  }
}
