tests/it/wire/snapshots/it__wire__openai_chat__a_catalog_estimate_fills_in_a_missing_provider_cost.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "content": [
    {
      "text": "ok",
      "type": "text"
    }
  ],
  "cost": {
    "source": "catalog",
    "usd_micros": 220
  },
  "finish_reason": "stop",
  "id": "chatcmpl-cost",
  "model": {
    "model": "compat-chat",
    "provider": "compat"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        }
      }
    ],
    "id": "chatcmpl-cost",
    "usage": {
      "completion_tokens": 10,
      "prompt_tokens": 200
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 200,
    "output": 10,
    "reasoning": 0
  }
}
