tests/it/wire/snapshots/it__wire__openai_chat__a_catalog_estimate_never_overwrites_a_provider_cost.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "id": "chatcmpl-cost",
  "model": {
    "provider": "compat",
    "model": "compat-chat"
  },
  "content": [
    {
      "type": "text",
      "text": "ok"
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 200,
    "output": 10,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "cost": {
    "usd_micros": 4200,
    "source": "provider"
  },
  "raw": {
    "id": "chatcmpl-cost",
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "ok"
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": 200,
      "completion_tokens": 10,
      "cost": 0.0042
    }
  }
}
