tests/it/wire/snapshots/it__wire__openai_chat__a_json_only_tool_result_sends_the_bare_value.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "What is the weather in Paris?",
            "type": "text"
          }
        ],
        "role": "user"
      },
      {
        "content": null,
        "role": "assistant",
        "tool_calls": [
          {
            "function": {
              "arguments": "{\"city\":\"Paris\"}",
              "name": "get_weather"
            },
            "id": "call_paris",
            "type": "function"
          }
        ]
      },
      {
        "content": "{\"city\":\"Paris\",\"temp_c\":18}",
        "role": "tool",
        "tool_call_id": "call_paris"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "447"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
