tests/it/wire/snapshots/it__wire__openai_chat__a_raw_provider_option_overrides_a_generated_field.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 512,
    "messages": [
      {
        "content": "Hello",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "temperature": 0.9
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "115"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
