tests/it/wire/snapshots/it__wire__openai_chat__a_replayed_reasoning_details_part_returns_to_its_own_field.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "361"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "type": "text",
            "text": "What is the weather in Paris?",
            "cache_control": {
              "type": "ephemeral"
            }
          }
        ]
      },
      {
        "role": "assistant",
        "content": "Looking it up.",
        "reasoning_details": [
          {
            "type": "reasoning.encrypted",
            "id": "rs-1",
            "data": "AQ=="
          }
        ]
      },
      {
        "role": "user",
        "content": "Thanks."
      }
    ],
    "stream": false,
    "max_tokens": 128
  }
}
