tests/it/wire/snapshots/it__wire__openai_chat__a_stream_cut_off_after_content_completes_as_incomplete.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
[
  {
    "id": "chatcmpl-cut",
    "type": "started"
  },
  {
    "id": "block-0",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "block-0",
    "text": "Half an",
    "type": "text_delta"
  },
  {
    "id": "block-0",
    "text": " answer",
    "type": "text_delta"
  },
  {
    "id": "block-0",
    "part": {
      "text": "Half an answer",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "response": {
      "content": [
        {
          "text": "Half an answer",
          "type": "text"
        }
      ],
      "finish_reason": "incomplete",
      "id": "chatcmpl-cut",
      "model": {
        "model": "compat-chat",
        "provider": "compat"
      },
      "usage": {
        "cache_read": 0,
        "cache_write": 0,
        "input": 0,
        "output": 0,
        "reasoning": 0
      }
    },
    "type": "ended"
  }
]
