tests/it/wire/snapshots/it__wire__openai_chat__a_stream_error_chunk_ends_the_stream.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
[
  {
    "type": "started",
    "id": "chatcmpl-stream"
  },
  {
    "type": "content_block_start",
    "id": "block-0",
    "kind": {
      "type": "text"
    }
  },
  {
    "type": "text_delta",
    "id": "block-0",
    "text": "Hel"
  },
  {
    "type": "error",
    "error": {
      "kind": "rate_limit",
      "message": "provider compat rate limit reached",
      "provider": "compat",
      "provider_code": "rate_limit_exceeded",
      "retry": {
        "type": "safe"
      },
      "raw_data": {
        "error": {
          "message": "rate limit reached",
          "type": "rate_limit_error",
          "code": "rate_limit_exceeded"
        }
      }
    }
  }
]
